--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,15 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    env_file:
+      - app.env
     environment:
-      - PYTHONUNBUFFERED=1
+      PYTHONUNBUFFERED: "1"
     networks:
       - todoapp-net
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     restart: unless-stopped
   mysql:
     image: mysql-local:1.0.0
@@ -24,15 +27,19 @@ services:
       dockerfile: Dockerfile.mysql
     container_name: my-sql
     ports:
-      - "3306:3306"
+      - "3306:3306" # should exist only for local development
     volumes:
       - todoapp-db-data:/var/lib/mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=1234
-      - MYSQL_DATABASE=app_db
-      - MYSQL_USER=app_user
-      - MYSQL_PASSWORD=1234
+    env_file:
+      - mysql.env
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -p$MYSQL_ROOT_PASSWORD --silent"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+      start_period: 10s
     networks:
       - todoapp-net
+    restart: unless-stopped
 volumes:
   todoapp-db-data:
