--- a/.github/workflows/app_ci.yml
+++ b/.github/workflows/app_ci.yml
@@ -1,36 +1,53 @@
-# This is a basic workflow to help you get started with Actions
+name: App CI/CD
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+
   push:
-    branches: [ "main" ]
+    branches: [ "develop" ]
   pull_request:
-    branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  build-test-scan:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.8' 
+      
+      - name: Install dev tools 
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          python -m pip install --upgrade pip
+          pip install -r ./docker/todoapp/requirements.txt
+          pip install flake8 black isort pytest
+
+      - name: Lint
+        run: |
+          flake8 .
+          black --check .
+          isort --check-only .
+          
+      - name: Set up Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build image
+        run: |
+          docker build -t ghcr.io/${{ github.repository }}:sha-${{ github.sha }} docker/todoapp
+
+      - name: Trivy scan
+        uses: aquasecurity/trivy-action@0.18.0
+        with:
+          scan-type: image
+          image-ref: ghcr.io/${{ github.repository }}:sha-${{ github.sha }}
+          vuln-type: 'os,library'
+          format: 'table'
+          severity: 'CRITICAL,HIGH'
+          exit-code: '1'   # фейлити PR при високих CVE
+
