--- a/.github/workflows/app_ci.yml
+++ b/.github/workflows/app_ci.yml
@@ -39,13 +39,15 @@ jobs:
       
       - name: Build image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}:sha-${{ github.sha }} docker/todoapp
+          IMAGE_NAME=$(echo "ghcr.io/${{ github.repository }}:sha-${{ github.sha }}" | tr '[:upper:]' '[:lower:]')
+          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
+          docker build -t $IMAGE_NAME docker/todoapp
 
       - name: Trivy scan
         uses: aquasecurity/trivy-action@0.18.0
         with:
           scan-type: image
-          image-ref: ghcr.io/${{ github.repository }}:sha-${{ github.sha }}
+          image-ref: ${{ env.IMAGE_NAME }}
           vuln-type: 'os,library'
           format: 'table'
           severity: 'CRITICAL,HIGH'
