--- a/.github/workflows/app_ci.yml
+++ b/.github/workflows/app_ci.yml
@@ -50,6 +50,6 @@ jobs:
           image-ref: ${{ env.IMAGE_NAME }}
           vuln-type: 'os,library'
           format: 'table'
-          severity: 'CRITICAL,HIGH'
+          severity: 'CRITICAL'
           exit-code: '1'   # фейлити PR при високих CVE
 
