triviignore added for unfixed CVE

--- a/.github/workflows/app_ci.yml
+++ b/.github/workflows/app_ci.yml
@@ -51,5 +51,6 @@ jobs:
           vuln-type: 'os,library'
           format: 'table'
           severity: 'CRITICAL'
+          ignore-unfixed: true
           exit-code: '1'   # фейлити PR при високих CVE
 
