--- a/docker/todoapp/Dockerfile
+++ b/docker/todoapp/Dockerfile
@@ -1,40 +1,39 @@
-# ---------- Stage 1: Build wheels ----------
+# ---------- Stage 1: build wheels ----------
 ARG PYTHON_VERSION=3.11-slim
 FROM python:${PYTHON_VERSION} AS builder
 
-WORKDIR /app
+WORKDIR /opt/build
 
-# Системні пакети для збірки mysqlclient
+# deps для збірки mysqlclient
 RUN apt-get update && apt-get install -y --no-install-recommends \
     pkg-config default-libmysqlclient-dev build-essential \
  && rm -rf /var/lib/apt/lists/*
 
-# Оновлюємо pip і ставимо залежності у вигляді wheel
-COPY requirements.txt .
+# інсталюємо залежності у вигляді wheel
+COPY docker/todoapp/requirements.txt .
 RUN pip install --upgrade pip && \
     pip wheel --no-cache-dir --wheel-dir /wheels -r requirements.txt
 
-COPY . .
-RUN chmod +x entrypoint.sh
 
-
-# ---------- Stage 2: Runtime ----------
+# ---------- Stage 2: runtime ----------
 FROM python:${PYTHON_VERSION} AS run
 
-WORKDIR /app
-ENV PYTHONUNBUFFERED=1
-
-# Тільки runtime-бібліотека для mysqlclient
+# лише runtime-бібліотека для mysqlclient
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libmariadb3 \
  && rm -rf /var/lib/apt/lists/*
 
-# Копіюємо wheels і встановлюємо
+# ставимо зібрані колеса
 COPY --from=builder /wheels /wheels
-RUN pip install --no-cache /wheels/*
+RUN pip install --no-cache-dir /wheels/* && rm -rf /wheels
 
-# Копіюємо код
-COPY --from=builder /app .
+# entrypoint кладемо поза /app, щоб volume його не перекривав
+COPY docker/todoapp/entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
+# робоча директорія для коду (буде змонтована з хоста)
+WORKDIR /app
 EXPOSE 8080
-ENTRYPOINT ["sh", "./entrypoint.sh"]
+
+ENTRYPOINT ["/entrypoint.sh"]
+
