--- a/.github/workflows/app_ci.yml
+++ b/.github/workflows/app_ci.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           IMAGE_NAME=$(echo "ghcr.io/${{ github.repository }}:sha-${{ github.sha }}" | tr '[:upper:]' '[:lower:]')
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
-          docker build -t $IMAGE_NAME docker/todoapp
+          docker build -t $IMAGE_NAME -f docker/todoapp/Dockerfile .
 
       - name: Trivy scan
         uses: aquasecurity/trivy-action@0.18.0
