--- a/.github/workflows/app_ci.yml
+++ b/.github/workflows/app_ci.yml
@@ -33,21 +33,24 @@ jobs:
           flake8 .
           black --check .
           isort --check-only .
+      
+      - name: Compute image name
+        id: metaname
+        run: |
+          echo "image_name=$(echo ghcr.io/${{ github.repository }}:sha-${{ github.sha }} | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_OUTPUT"
           
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
       
       - name: Build image
         run: |
-          IMAGE_NAME=$(echo "ghcr.io/${{ github.repository }}:sha-${{ github.sha }}" | tr '[:upper:]' '[:lower:]')
-          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
-          docker build -t $IMAGE_NAME -f docker/todoapp/Dockerfile .
+          docker build -t "${{ steps.metaname.outputs.image_name }}" -f docker/todoapp/Dockerfile .
 
       - name: Trivy scan
         uses: aquasecurity/trivy-action@0.18.0
         with:
           scan-type: image
-          image-ref: ${{ env.IMAGE_NAME }}
+          image-ref: ${{ steps.metaname.outputs.image_name }}
           vuln-type: 'os,library'
           format: 'table'
           severity: 'CRITICAL'
