--- a/.github/workflows/app_ci.yml
+++ b/.github/workflows/app_ci.yml
@@ -1,9 +1,19 @@
 name: App CI/CD
 
+run-name: ${{ github.actor }} - ${{ github.ref_name}} -${{ github.sha }}
+
 on:
   push:
     branches: [ "develop" ]
+    paths: [ "src/**", ".github/workflows/**" ]
   pull_request:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true 
+
+env:
+  DockerImageName: ghcr.io/alex13-th/devops-app
 
 jobs:
   build-test-scan:
@@ -49,25 +59,34 @@ jobs:
         run: |
           python manage.py test
 
-      - name: Compute image name
-        id: metaname
-        run: |
-          echo "image_name=$(echo ghcr.io/${{ github.repository }}:sha-${{ github.sha }} | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_OUTPUT"
-
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build image
-        run: |
-          docker build -t "${{ steps.metaname.outputs.image_name }}" -f Dockerfile .
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & Push image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./src
+          file: ./src/Dockerfile
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ env.DockerImageName }}:sha-${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Trivy scan
         uses: aquasecurity/trivy-action@0.18.0
         with:
           scan-type: image
-          image-ref: ${{ steps.metaname.outputs.image_name }}
+          image-ref: ${{ env.DockerImageName }}:sha-${{ github.sha }}
           vuln-type: 'os,library'
           format: 'table'
           severity: 'CRITICAL'
           ignore-unfixed: true
           exit-code: '1'
+      
