--- a/.github/workflows/app_ci.yml
+++ b/.github/workflows/app_ci.yml
@@ -69,17 +69,19 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build & Push image
-        uses: docker/build-push-action@v5
+      - name: Build (local)
+        if: github.event_name == 'pull_request'
+        uses: docker/build-push-action@v6
         with:
           context: ./src
           file: ./src/Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
+          load: true
           tags: ${{ env.DockerImageName }}:sha-${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Trivy scan
+      - name: Trivy scan (local)
+        if: github.event_name == 'pull_request'
         uses: aquasecurity/trivy-action@0.18.0
         with:
           scan-type: image
@@ -89,6 +91,15 @@ jobs:
           severity: 'CRITICAL'
           ignore-unfixed: true
           exit-code: '1'
-          github-pat: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Build & Push
+        if: github.event_name != 'pull_request'
+        uses: docker/build-push-action@v6
+        with:
+          context: ./src
+          file: ./src/Dockerfile
+          push: true
+          tags: ${{ env.DockerImageName }}:sha-${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       
