--- a/k8s/todoapp-configmap.yaml
+++ b/k8s/todoapp-configmap.yaml
@@ -6,5 +6,5 @@ metadata:
 data:
   DB_ENGINE: "django.db.backends.mysql"
   DB_NAME: "app_db"
-  DB_HOST: "mysql"
+  DB_HOST: "mysql-headless-service.db-ns.svc"
   DB_PORT: "3306"
