--- a/k8s/todoapp-deployment.yaml
+++ b/k8s/todoapp-deployment.yaml
@@ -18,6 +18,7 @@ spec:
       labels:
         app: todoapp-web
     spec:
+      serviceAccountName: todoapp-sa 
       terminationGracePeriodSeconds: 30
       containers:
         - name: todoapp
